--- a/.gitignore
+++ b/.gitignore
@@ -1,502 +1,209 @@
-{
-  caseId: "31a4aa09-ac6c-4c02-a58f-6bf4d48d1d9c",
-  caseNumber: "FEE4514",
-  cif: "F016583",
-  customerName: "FRANCO JACK",
-  customerAddress: "JACK FRANCO 425 EAST 58TH STREET APT # 48 B NEW YORK NY 10022",
-  customerAccountOfficer: "036 Sigalit Levy-Shabi        BR 4",
-  fees: [
-    {
-      feeType: "Customer Fees",
-      feeGroups: [
-        {
-          name: "Standard Fees",
-          code: 1,
-          fields: [
-            {
-              code: 1,
-              isStandard: false,
-              isCurrentClient: false,
-              isException: false,
-              name: "Account Maintenance Fee",
-              defaultValue: "25.00",
-              labelValue: "$25.00",
-              hasChanged: false,
-              tooltip: "Monthly - Charged Quarterly",
-              exceptionOptions: [
-              ],
-              createdAt: "2025-02-14T13:17:38.038Z",
-              updatedAt: "2025-02-14T13:17:38.038Z",
-              id: "67af4256263883bbd401ed52",
-            },
-            {
-              code: 2,
-              isStandard: false,
-              isCurrentClient: false,
-              isException: false,
-              name: "Hold Mail Fee",
-              defaultValue: "0.00",
-              labelValue: "$0.00",
-              hasChanged: false,
-              tooltip: "Annual - Charged Annual",
-              exceptionOptions: [
-              ],
-              createdAt: "2025-02-14T13:17:38.038Z",
-              updatedAt: "2025-02-14T13:17:38.038Z",
-              id: "67af4256263883bbd401ed53",
-            },
-          ],
-          cif: "F016583",
-          accountNumber: "7115342",
-          visible: true,
-          kycMailingStatus: "Standard",
-          createdAt: "2025-02-14T13:17:38.038Z",
-          updatedAt: "2025-02-14T13:17:38.038Z",
-          id: "67af4256263883bbd401ed51",
-        },
-        {
-          name: "Client Current Fees",
-          code: 2,
-          fields: [
-            {
-              code: 1,
-              isStandard: false,
-              isCurrentClient: false,
-              isException: false,
-              name: "Account Maintenance Fee",
-              defaultValue: "25",
-              labelValue: "$25.00",
-              hasChanged: false,
-              tooltip: "Monthly - Charged Quarterly",
-              exceptionOptions: [
-              ],
-              createdAt: "2025-02-14T13:17:38.038Z",
-              updatedAt: "2025-02-14T13:17:38.038Z",
-              id: "67af4256263883bbd401ed55",
-            },
-            {
-              code: 2,
-              isStandard: false,
-              isCurrentClient: false,
-              isException: false,
-              name: "Hold Mail Fee",
-              defaultValue: "NOT APPLICABLE",
-              labelValue: "NOT APPLICABLE",
-              hasChanged: false,
-              tooltip: "Annual - Charged Annual",
-              exceptionOptions: [
-              ],
-              createdAt: "2025-02-14T13:17:38.038Z",
-              updatedAt: "2025-02-14T13:17:38.038Z",
-              id: "67af4256263883bbd401ed56",
-            },
-          ],
-          cif: "F016583",
-          accountNumber: "7115342",
-          visible: true,
-          kycMailingStatus: "Standard",
-          createdAt: "2025-02-14T13:17:38.038Z",
-          updatedAt: "2025-02-14T13:17:38.038Z",
-          id: "67af4256263883bbd401ed54",
-        },
-        {
-          name: "Exception Request",
-          code: 3,
-          fields: [
-            {
-              code: 1,
-              isStandard: false,
-              isCurrentClient: false,
-              isException: true,
-              name: "Account Maintenance Fee",
-              defaultValue: "25.00",
-              labelValue: "",
-              hasChanged: true,
-              tooltip: "",
-              exceptionOptions: [
-                {
-                  value: "0.00",
-                  text: "$0.00",
-                  retired: false,
-                  visible: true,
-                  approvedByDoubleA: null,
-                  _id: {
-                  },
-                },
-                {
-                  value: "25.00",
-                  text: "$25.00",
-                  retired: false,
-                  visible: true,
-                  approvedByDoubleA: null,
-                  _id: {
-                  },
-                },
-              ],
-              createdAt: "2025-02-14T13:17:38.038Z",
-              updatedAt: "2025-02-14T13:17:39.726Z",
-              approved: true,
-              results: {
-                FLAVIOH: "Approved",
-              },
-              id: "67af4256263883bbd401ed58",
-            },
-            {
-              code: 2,
-              isStandard: false,
-              isCurrentClient: false,
-              isException: true,
-              name: "Hold Mail Fee",
-              defaultValue: "NOT APPLICABLE",
-              labelValue: "",
-              hasChanged: false,
-              tooltip: "",
-              exceptionOptions: [
-                {
-                  value: "0.00",
-                  text: "$0.00",
-                  retired: false,
-                  visible: true,
-                  approvedByDoubleA: null,
-                  _id: {
-                  },
-                },
-              ],
-              createdAt: "2025-02-14T13:17:38.038Z",
-              updatedAt: "2025-02-14T13:17:39.726Z",
-              approved: true,
-              id: "67af4256263883bbd401ed5b",
-            },
-          ],
-          cif: "F016583",
-          accountNumber: "7115342",
-          visible: true,
-          kycMailingStatus: "Standard",
-          createdAt: "2025-02-14T13:17:38.038Z",
-          updatedAt: "2025-02-14T13:17:39.726Z",
-          id: "67af4256263883bbd401ed57",
-          approvalResults: [
-            {
-              message: "Approved by Flavio Hojda on 2/14/2025",
-              approved: true,
-              note: undefined,
-            },
-          ],
-        },
-      ],
-      createdAt: "2025-02-14T13:17:38.038Z",
-      updatedAt: "2025-02-14T13:17:39.726Z",
-      id: "67af4271263883bbd401ede1",
-    },
-  ],
-  visibleToUsers: [
-    {
-      userName: "AlexR",
-    },
-    {
-      userName: "AliciaH",
-    },
-    {
-      userName: "AndreB",
-    },
-    {
-      userName: "AndreF",
-    },
-    {
-      userName: "AndresA",
-    },
-    {
-      userName: "AnthonyD",
-    },
-    {
-      userName: "BetiM",
-    },
-    {
-      userName: "BryanP",
-    },
-    {
-      userName: "CameronC",
-    },
-    {
-      userName: "CarolP",
-    },
-    {
-      userName: "CatherinaM",
-    },
-    {
-      userName: "CharlieB",
-    },
-    {
-      userName: "DanielD",
-    },
-    {
-      userName: "EitanF",
-    },
-    {
-      userName: "FatimaS",
-    },
-    {
-      userName: "GerardM",
-    },
-    {
-      userName: "GustavoB",
-    },
-    {
-      userName: "hazelc",
-    },
-    {
-      userName: "IsabelleLI",
-    },
-    {
-      userName: "IvanM",
-    },
-    {
-      userName: "JeremyJ",
-    },
-    {
-      userName: "JosephC",
-    },
-    {
-      userName: "JosephineV",
-    },
-    {
-      userName: "JuanO",
-    },
-    {
-      userName: "KenP",
-    },
-    {
-      userName: "KerenS",
-    },
-    {
-      userName: "KyriacosS",
-    },
-    {
-      userName: "ManuelR",
-    },
-    {
-      userName: "MariaP",
-    },
-    {
-      userName: "MarilenaV",
-    },
-    {
-      userName: "MartinB",
-    },
-    {
-      userName: "MauricioF",
-    },
-    {
-      userName: "MelissaS",
-    },
-    {
-      userName: "MichaelKap",
-    },
-    {
-      userName: "MichaelV",
-    },
-    {
-      userName: "MilenaK",
-    },
-    {
-      userName: "MordekhaiA",
-    },
-    {
-      userName: "MurielANF",
-    },
-    {
-      userName: "MurielAZ",
-    },
-    {
-      userName: "MurielDW",
-    },
-    {
-      userName: "MurielDWA",
-    },
-    {
-      userName: "MurielFHO",
-    },
-    {
-      userName: "MurielJBR",
-    },
-    {
-      userName: "MurielMBA",
-    },
-    {
-      userName: "MURIELMBA1",
-    },
-    {
-      userName: "MurielMSE",
-    },
-    {
-      userName: "MurielSAZA",
-    },
-    {
-      userName: "MurielSJOR",
-    },
-    {
-      userName: "MurielSMO",
-    },
-    {
-      userName: "PaulaR",
-    },
-    {
-      userName: "PauloS",
-    },
-    {
-      userName: "PedroNa",
-    },
-    {
-      userName: "RaquelR",
-    },
-    {
-      userName: "RenataSc",
-    },
-    {
-      userName: "RichardSc",
-    },
-    {
-      userName: "SamanthaO",
-    },
-    {
-      userName: "SandriniD",
-    },
-    {
-      userName: "Shakeyak",
-    },
-    {
-      userName: "SheilaO",
-    },
-    {
-      userName: "SheldonKI",
-    },
-    {
-      userName: "SigiL",
-    },
-    {
-      userName: "SylviaRC",
-    },
-    {
-      userName: "ThomasO",
-    },
-    {
-      userName: "TiffanyO",
-    },
-    {
-      userName: "VictoriaR",
-    },
-    {
-      userName: "YaakobA",
-    },
-  ],
-  reason: "asdsadsadsadasdasdasdasdasdadsada",
-  documents: [
-  ],
-  status: "DONE",
-  userOwner: "FlavioH",
-  usersApprovers: [
-    {
-      userName: "AlexandreT",
-      userNameFull: "Alexandre Tassari",
-      email: "Alexandre.Tassari@safra.com",
-      signature: "PB AA",
-      createdAt: "2025-02-14T13:17:39.726Z",
-      updatedAt: "2025-02-14T13:17:39.726Z",
-      id: "67af4273263883bbd401ef4b",
-    },
-    {
-      userName: "Carlosb",
-      userNameFull: "Carlos Bomfim",
-      email: "Carlos.bertaco@safra.com",
-      signature: "ExCom AA",
-      createdAt: "2025-02-14T13:17:39.726Z",
-      updatedAt: "2025-02-14T13:17:39.726Z",
-      id: "67af4273263883bbd401ef4d",
-    },
-    {
-      userName: "FlavioH",
-      userNameFull: "Flavio Hojda",
-      email: "Flavio.Hojda@safra.com",
-      signature: "PB AAA",
-      result: "APPROVED",
-      createdAt: "2025-02-14T13:17:39.726Z",
-      updatedAt: "2025-02-14T13:17:39.726Z",
-      id: "67af4273263883bbd401ef4f",
-    },
-    {
-      userName: "IsabelleL",
-      userNameFull: "Isabelle Le Roch",
-      email: "Isabelle.LeRoch@safra.com",
-      signature: "PB AAA",
-      createdAt: "2025-02-14T13:17:39.726Z",
-      updatedAt: "2025-02-14T13:17:39.726Z",
-      id: "67af4273263883bbd401ef51",
-    },
-    {
-      userName: "MichellB",
-      userNameFull: "Michell Brown",
-      email: "Michell.Brown@safra.com",
-      signature: "PB AAA",
-      createdAt: "2025-02-14T13:17:39.726Z",
-      updatedAt: "2025-02-14T13:17:39.726Z",
-      id: "67af4273263883bbd401ef53",
-    },
-    {
-      userName: "Muriels",
-      userNameFull: "Muriel Seligson",
-      email: "muriel.seligson@safra.com",
-      signature: "PB AAA",
-      createdAt: "2025-02-14T13:17:39.727Z",
-      updatedAt: "2025-02-14T13:17:39.727Z",
-      id: "67af4273263883bbd401ef55",
-    },
-    {
-      userName: "PeterJ",
-      userNameFull: "Peter Javier",
-      email: "Peter.Javier@safra.com",
-      signature: "ExCom AA",
-      createdAt: "2025-02-14T13:17:39.727Z",
-      updatedAt: "2025-02-14T13:17:39.727Z",
-      id: "67af4273263883bbd401ef57",
-    },
-    {
-      userName: "RafaeloC",
-      userNameFull: "Rafaelo Colombo",
-      email: "Rafaelo.Colombo@safra.com",
-      signature: "ExCom AA",
-      createdAt: "2025-02-14T13:17:39.727Z",
-      updatedAt: "2025-02-14T13:17:39.727Z",
-      id: "67af4273263883bbd401ef59",
-    },
-    {
-      userName: "SheldonK",
-      userNameFull: "Sheldon Kirsh",
-      email: "Sheldon.Kirsh@safra.com",
-      signature: "PB AA",
-      createdAt: "2025-02-14T13:17:39.727Z",
-      updatedAt: "2025-02-14T13:17:39.727Z",
-      id: "67af4273263883bbd401ef5b",
-    },
-  ],
-  equityTeam: [
-  ],
-  secopsTeam: [
-  ],
-  createdAt: "2025-02-14T13:17:38.038Z",
-  updatedAt: "2025-02-14T13:17:39.727Z",
-  __v: 1,
-  levelApprover: 1,
-  userOwnerEmail: "Flavio.Hojda@safra.com",
-  userOwnerName: "Flavio Hojda",
-  signatureApprover: "PB AA",
-  levelApproverType: "Bank Fee Exception",
-  id: "67af4271263883bbd401ede0",
-  documentUrl: "https://minio-ui.dev.k8s.safra.int/api/v1/buckets/jarvis-public/objects/download?preview=true&prefix=U2NoZWR1bGVPZkZlZXMucGRm",
-  feesActives: [
-    {
-      caseNumber: "FEE4513",
-      id: "67af419d263883bbd401e941",
-    },
-  ],
-  canApprove: false,
+import Result from '#features/shared/result.js'
+import { FeeCase } from '#src/models/entities/FeeCase.js'
+
+function formatMessage(result, userNameFull, updatedAt) {
+  return `${result} by ${userNameFull} on ${new Date(
+    updatedAt
+  ).toLocaleDateString('en-US')}`
+}
+
+function findApprover(field, approver) {
+  global.logger.info('findApprover()')
+  const result = field.results.get(approver.userName.toUpperCase())
+  if (!result) return null
+
+  const message = formatMessage(result, approver.userNameFull, approver.updatedAt)
+  return {
+    message,
+    approved: result === 'Approved',
+    note: field.rejectComment
+  }
+}
+
+function processCommonApprover(feeCase, feeGroup, commonApprover) {
+  global.logger.info('processCommonApprover()')
+  const approvers = []
+
+  const field = feeGroup.fields.find(
+    (field) => field.hasChanged && (field.approved || field.reject)
+  )
+  if (!field) return approvers
+
+  if (!field.results) {
+    field.results = {}
+  } else {
+    const commonApproverResult = findApprover(field, commonApprover)
+    if (commonApproverResult) {
+      approvers.push(commonApproverResult)
+    }
+
+    const equityApprover = feeCase.equityTeam.find((user) => user.result)
+    if (equityApprover) {
+      const equityField = feeGroup.fields.find(
+        (f) =>
+          f.results &&
+          !!f.results.get(equityApprover.userName.toUpperCase())
+      )
+
+      if (equityField) {
+        const equityApproverResult = findApprover(equityField, equityApprover)
+        if (equityApproverResult) {
+          approvers.push(equityApproverResult)
+        }
+        equityField.results = Object.fromEntries(field.results)
+      }
+    }
+
+    if (field.results instanceof Map) {
+      field.results = Object.fromEntries(field.results)
+    }
+  }
+
+  return approvers
+}
+
+function resetLastFieldBasedOnConditions(lastField, lastOption, feeCase) {
+  if (
+    lastOption.text === 'Other' &&
+    lastOption.value !== '' &&
+    feeCase.status === 'PENDING_EQUITY' &&
+    lastField.approved
+  ) {
+    delete lastField.approved
+    delete lastField.reject
+    delete lastField.rejectComment
+  }
+}
+
+// Exemplo de função auxiliar que pega a URL do environment, caso queira
+function getDocumentUrl() {
+  // Ajuste o nome do bucket, prefix, etc., conforme sua config:
+  return global.environment?.documentUrl || 
+    'https://minio-ui.dev.k8s.safra.int/api/v1/buckets/jarvis-public/objects/download?preview=true&prefix=U2NoZWR1bGVPZkZlZXMucGRm'
+}
+
+export default class FeeCaseGetByIdAndUserNameUseCase {
+  async execute({ feeId, userName }) {
+    global.logger.info(`FeeCaseGetByIdAndUserNameUseCase(fee=${feeId}, userName=${userName})`)
+
+    const strategyForStatus = {
+      INITIAL: 'usersApprovers',
+      PENDING_APPROVAL: 'usersApprovers',
+      PENDING_EQUITY: 'equityTeam',
+      PENDING_SECOPS: 'secopsTeam',
+      VISIBLE_ONLY: 'visibleToUsers'
+    }
+
+    const strategyForApprover = {
+      INITIAL: 'canApprove',
+      PENDING_APPROVAL: 'canApprove',
+      PENDING_EQUITY: 'canEditEquity',
+      PENDING_SECOPS: 'canEditSecops'
+    }
+
+    // Verifica se existe
+    const hasFee = await FeeCase.exists({ _id: feeId })
+    if (!hasFee) {
+      return Result.fail('Fee case not found')
+    }
+
+    // Carrega do banco e converte em objeto
+    const feeCase = await (await FeeCase.findById(feeId)).toObject()
+
+    // Injetamos manualmente a documentUrl
+    feeCase.documentUrl = getDocumentUrl()
+
+    // Caso possua defaultPackageType, branchType, etc., podemos adicioná-los também
+    // feeCase.branchType = ...
+    // feeCase.defaultPackageType = ...
+    // feeCase.feePackage = ...
+    // Exemplo (caso feeCase já tenha, ou venha de outro local):
+    // feeCase.branchType = feeCase.branchType || 'Domestic'
+    // feeCase.defaultPackageType = feeCase.defaultPackageType || 'Individual'
+
+    // feesActives
+    const feesActives = await FeeCase.find({
+      cif: feeCase.cif,
+      status: { $nin: ['DONE', 'REJECTED'] },
+      caseNumber: { $exists: true }
+    })
+
+    feeCase.feesActives = feesActives?.map((x) => ({
+      caseNumber: x.caseNumber,
+      id: x.id
+    }))
+
+    // Se status != 'INITIAL' ou 'PENDING_APPROVAL', processa exceções
+    if (!['INITIAL', 'PENDING_APPROVAL'].includes(feeCase.status)) {
+      feeCase.fees.forEach((fee) => {
+        fee.feeGroups.forEach((feeGroup) => {
+          if (feeGroup.name !== 'Exception Request') return
+
+          const lastField = feeGroup.fields.slice(-1)[0]
+          const lastOption = lastField.exceptionOptions.slice(-1)[0]
+
+          const commonApprover = feeCase.usersApprovers.find((user) => user.result)
+          if (commonApprover) {
+            feeGroup.approvalResults = processCommonApprover(feeCase, feeGroup, commonApprover)
+          }
+
+          resetLastFieldBasedOnConditions(lastField, lastOption, feeCase)
+        })
+      })
+    }
+
+    // Se o usuário dono do case é o userName
+    if (feeCase?.userOwner?.toUpperCase() === userName?.toUpperCase()) {
+      feeCase.canApprove = false
+      return Result.ok(feeCase)
+    }
+
+    // Qual a lista que contém este user no status atual
+    const userListProperty = strategyForStatus[feeCase.status]
+    const canApproveProperty = strategyForApprover[feeCase.status]
+
+    // Verifica se userName está no userListProperty
+    if (
+      feeCase[userListProperty] &&
+      feeCase[userListProperty].some(
+        (x) => x.userName?.toUpperCase() === userName?.toUpperCase()
+      )
+    ) {
+      feeCase[canApproveProperty] = true
+
+      // Se 'PENDING_APPROVAL' e signature AAA => canSeeRevenueReport
+      if (
+        feeCase.status === 'PENDING_APPROVAL' &&
+        feeCase[userListProperty]
+          .filter((x) => x.userName?.toUpperCase() === userName?.toUpperCase())[0]
+          ?.signature.includes('AAA')
+      ) {
+        feeCase.canSeeRevenueReport = true
+      }
+
+      return Result.ok(feeCase)
+    }
+
+    // Se não está, checamos se pode "ver" (canSeeCase)
+    const propertys = Object.keys(strategyForStatus)
+    let canSeeCase = false
+    for (const property of propertys) {
+      const userProperty = strategyForStatus[property]
+      if (
+        feeCase[userProperty] &&
+        feeCase[userProperty].some(
+          (x) => x.userName?.toUpperCase() === userName?.toUpperCase()
+        )
+      ) {
+        canSeeCase = true
+        break
+      }
+    }
+
+    if (canSeeCase) {
+      return Result.ok(feeCase)
+    }
+
+    return Result.fail('Not found')
+  }
 }
